--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^0.8.2",
     "cookie-parser": "~1.3.5",
+    "crypto": "0.0.3",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "express-session": "^1.12.1",
+    "formidable": "^1.0.17",
     "morgan": "~1.6.1",
+    "multer": "^1.1.0",
+    "multiparty": "^4.1.2",
     "serve-favicon": "~2.3.0"
   }
 }
