--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.13.1",
     "express-session": "^1.12.1",
     "formidable": "^1.0.17",
+    "mongoose": "^4.2.10",
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
     "multiparty": "^4.1.2",
